--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -23,7 +23,7 @@
       <section class="head-section">
          <div class="totalbalance">
             <div class="top1">
-               <img class="left" src="./icons/total-bal.svg" height="30" weight="30" alt="balance-icon" >
+               <img class="left" src="../icons/total-bal.svg" height="30" weight="30" alt="balance-icon" >
                <p class="right"><span><img src="../icons/arrow.svg" height="15" weight="15" alt="arrow"></span id="added-percent-balance">+5%</p>
             </div>
             <div class="bot1">
@@ -128,8 +128,16 @@
             <div class="nav-icon">
                <img  src="../icons/login.svg" alt="login-icon">
             </div>
-            <a href="/"><button class="nav-text" >Sign In</button></a>
-            <a href="/logout"><button class="nav-text" >Logout</button></a>
+            <!-- <a href="/"><button class="nav-text" >Sign In</button></a> -->
+
+            <a href="/accounts"> 
+               <!-- TODO: change this to ejs -->
+                <!-- should be accounts or login -->
+               <button class="nav-text" >Accounts
+               </button>
+               <a href="/logout"><button class="nav-text" >Logout</button>
+            </a>
+
          </li>
       </div>
    </nav>
