added profile info to the database

--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -130,10 +130,10 @@
             </div>
             <!-- <a href="/"><button class="nav-text" >Sign In</button></a> -->
 
-            <a href="/accounts"> 
+            <a href="<%= isLoggedIn ? '/accounts' : '/' %>"> 
                <!-- TODO: change this to ejs -->
                 <!-- should be accounts or login -->
-               <button class="nav-text" >Accounts
+               <button class="nav-text" ><%= isLoggedIn ? 'Account' : 'Sign-In' %>
                </button>
                <a href="/logout"><button class="nav-text" >Logout</button>
             </a>
