added auto login if the user has logged in

--- a/login.ejs
+++ b/login.ejs
@@ -12,7 +12,7 @@
       <input id="username" type="text">
       <label for="password">password</label>
       <input id="password" type="password">
-      <button id="login-btn">Login</button>
+      <!-- <button id="login-btn">Login</button> -->
 
       <div class="sign-in_with_google">
          <button type="button" class="googleSignIn">Sign-in with google</button>
