--- a/login.ejs
+++ b/login.ejs
@@ -11,6 +11,7 @@
       <div class="featuresDiv">
          <!-- Features of  some functionality will be shown here in image form-->
       </div>
+      <!-- TODO: add header/app logo -->
       <div class="formDiv">
          <form action="submit" class="login-form" method="post">
             <legend>Sign In</legend>
