--- a/login.ejs
+++ b/login.ejs
@@ -19,7 +19,7 @@
             <input id="username" type="text">
             <label for="password">password</label>
             <input id="password" type="password">
-            <button type="button">Continue</button>
+            <button class="continue" type="button">Continue</button>
 
             <p class="or-text">or sign-in with</p>
             <!-- <button id="login-btn">Login</button> -->
