--- a/login.ejs
+++ b/login.ejs
@@ -15,10 +15,11 @@
       <div class="formDiv">
          <form action="submit" class="login-form" method="post">
             <legend>Sign In</legend>
-            <label for="username">username</label>
-            <input id="username" type="text">
-            <label for="password">password</label>
-            <input id="password" type="password">
+            <p>Sign in if you already have an account</p>
+            <label for="username">Enter your username</label>
+            <input id="username" type="text" placeholder="email">
+            <label for="password">Enter your password</label>
+            <input id="password" type="password" placeholder="password">
             <button class="continue" type="button">Continue</button>
 
             <p class="or-text">or sign-in with</p>
