--- a/login.ejs
+++ b/login.ejs
@@ -17,9 +17,9 @@
             <legend>Sign In</legend>
             <p>Sign in if you already have an account</p>
             <label for="username">Enter your username</label>
-            <input id="username" type="text" placeholder="email">
+            <input id="username" type="text" placeholder="Email">
             <label for="password">Enter your password</label>
-            <input id="password" type="password" placeholder="password">
+            <input id="password" type="password" placeholder="Password">
             <button class="continue" type="button">Continue</button>
 
             <p class="or-text">or sign-in with</p>
