added svg icon google

--- a/login.ejs
+++ b/login.ejs
@@ -24,7 +24,7 @@
 
             <p class="or-text">or sign-in with</p>
             <!-- <button id="login-btn">Login</button> -->
-             <a href="/auth/google"><button class="sign-in_with_google">Sign in with Google</button></a>
+             <a href="/auth/google"><button class="sign-in_with_google"><img src="./icons/ic_google.svg" width="20px" height="20px" alt="Google icon"> Sign in with Google</button></a>
          
             <!-- <button type="button" class="googleSignIn">Sign-in with google</button> -->
             <p class="no-account">Don't have an account? <span><a href="#">Sign Up</a></span></p>
