--- a/v2-trackrecord/src/css/Dashboard.css
+++ b/v2-trackrecord/src/css/Dashboard.css
@@ -5,10 +5,13 @@
   --main-text: #0b191e;
   --main-bg: #f8fbfc;
   --main-bg2: #EEF3FC;
-  --main-prim: #41a4c8;
-  --main-second: #89c9e1;
+  --main-prim: rgb(65, 164, 200);
+  --main-second: rgb(137, 201, 225);
   --main-accent: #58b7da;
-  --dark-blue: #277B9A;
+  --dark-blue: #277b9a;
+  
+  --green: rgb(32, 234, 131);
+  --red: rgb(230, 77, 89);
   --text: #0B191E;
 
   --accent25: hsla(196, 64%, 60%, 0.25);
@@ -123,33 +126,40 @@ h1, h2, h3, h4, h5 {
 }
 
 
-.container {  
+.container {
+  background-color: var(--main-bg);  
   display: grid;
   grid-template-columns: 1fr 1fr;
-  grid-template-rows: 70px 1fr 1fr 1fr;
+  grid-template-rows: 70px auto 1fr 1fr; /* Manually control the row height */
   grid-auto-columns: 1fr;
-  gap: 35px 25px;
+  row-gap: 0;
+  column-gap: 25px; 
   grid-auto-flow: row;
   grid-template-areas:
     "heading heading"
     "total-balance income"
     "financial-insight financial-insight"
     "recent-transaction recent-transaction";
-    height: 100vh;
-    padding: 20px;
-    width: 100%;
+  height: 100vh;
+  padding: 20px;
+  width: 100%;
 }
+
 
 .heading { 
   grid-area: heading;
 }
 
-.total-balance {  
+.total-balance, .total-income {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
-  grid-template-rows: 1fr 1fr 1fr;
+  grid-template-rows: 50px 1fr 1fr;
   gap: 0px 0px;
   grid-auto-flow: row;
+  padding: 20px 25px;
+}
+
+.total-balance {  
   grid-template-areas:
     "ic-balance . percent-change"
     "balance-info balance-info balance-info"
@@ -159,18 +169,17 @@ h1, h2, h3, h4, h5 {
   border-radius: 10px;
 }
 
-.balance-info { grid-area: balance-info; }
+/*  TODO: change it's flex-direction to reposition graph at 1028px */
+.balance-info { 
+  grid-area: balance-info; 
+  display: flex;
+}
 
 .percent-change { grid-area: percent-change; }
 
 .ic-balance { grid-area: ic-balance; }
 
-.income {  
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  grid-template-rows: 1fr 1fr 1fr;
-  gap: 0px 0px;
-  grid-auto-flow: row;
+.total-income {  
   grid-template-areas:
     "ic-income . percent-changed"
     "income-info income-info income-info"
@@ -184,12 +193,16 @@ h1, h2, h3, h4, h5 {
 
 .percent-changed { grid-area: percent-changed; }
 
-.income-info { grid-area: income-info; }
+.income-info { 
+  grid-area: income-info; 
+  display: flex;
+}
 
 .financial-insight { 
   grid-area: financial-insight;
   background-color: var(--accent10);
   border-radius: 10px;
+  margin-top: 25px;
 }
 
 .recent-transaction { 
@@ -205,6 +218,7 @@ h1, h2, h3, h4, h5 {
   grid-area: recent-transaction;
   background-color: var(--accent10);
   border-radius: 10px;
+  margin-top: 25px;
 }
 
 .heading-transaction { grid-area: heading-transaction; }
@@ -212,3 +226,44 @@ h1, h2, h3, h4, h5 {
 .view-all { grid-area: view-all; }
 
 .transaction-table { grid-area: transaction-table; }
+
+/* TODO: make this responsive */
+.balance-info, 
+.income-info {
+  gap: 30px;
+}
+
+.ic-balance, .ic-income,
+.percent-change, .percent-changed  {
+  width: 40px;
+  height: 40px;
+  display: block;
+  justify-content: center;
+  align-items: center;
+  display: flex;
+}
+
+.percent-change, .percent-changed  {
+  justify-self:end;
+}
+
+.balance-num, .income-num {
+  font-weight: 800;
+  font-size:20px;
+}
+
+.txt {
+  width: 250px;
+}
+
+
+.graph {
+  width: 100%;
+}
+
+canvas {
+  width: 100% !important;
+  /* height: 70% !important; */
+  min-width: 170px;
+  min-height: 100px !important;
+}
