--- a/v2-trackrecord/src/css/Dashboard.css
+++ b/v2-trackrecord/src/css/Dashboard.css
@@ -123,8 +123,17 @@ h1, h2, h3, h4, h5 {
 .App.dashboard {
   display:flex;
   flex-direction: row;
+  height: 100vh;
+  overflow-y: scroll;
 }
 
+/* TODO: add a media query to this container */
+.container.mainDashboard {
+  margin-left: 250px; 
+  padding: 20px;
+  width: calc(100% - 250px); 
+  height: 100%;
+}
 
 .container {
   background-color: var(--main-bg);  
@@ -140,7 +149,7 @@ h1, h2, h3, h4, h5 {
     "total-balance income"
     "financial-insight financial-insight"
     "recent-transaction recent-transaction";
-  height: 100vh;
+  height: fit-content;
   padding: 20px;
   width: 100%;
 }
@@ -219,6 +228,7 @@ h1, h2, h3, h4, h5 {
   background-color: var(--accent10);
   border-radius: 10px;
   margin-top: 25px;
+  height: 200px;
 }
 
 .heading-transaction { grid-area: heading-transaction; }
@@ -261,9 +271,138 @@ h1, h2, h3, h4, h5 {
   width: 100%;
 }
 
-canvas {
+.graph canvas {
   width: 100% !important;
   /* height: 70% !important; */
   min-width: 170px;
   min-height: 100px !important;
+}
+
+/* FINANCIAL INSIGHT */
+
+.FinancialInsight-container {
+  height: 300px;
+  padding: 25px;
+}
+
+.FinancialInsight-container header {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 25px;
+  align-items: center;
+}
+
+.FinancialInsight-container header .left,
+.FinancialInsight-container header .right {
+  display:flex;
+  align-items: center; 
+}
+
+.FinancialInsight-container header .left {
+  gap:5px;
+}
+
+.FinancialInsight-container header .right {
+  gap: 20px;
+} 
+
+.ic-info {
+  background-color: var(--accent25);
+  padding: 2px;
+  font-size: 8px;
+  width:13px;
+  border-radius:50px;
+  text-align: center;
+  position:relative;
+}
+
+.ic-info:hover {
+  cursor: pointer;
+}
+
+.right select#timeline {
+  border: none;
+  padding-block: 3px;
+  background-color: var(--main-accent);
+  color: var(--main-bg);
+  padding-inline: 10px;
+  border-radius: 5px;
+}
+
+.right select#timeline:active,
+.right select#timeline:hover,
+.right select#timeline:focus{
+  border:none;
+}
+
+.financial-insight canvas {
+  /* min-width: 170px; */
+  /* width: 100% !important;
+  height: 100%; */
+}
+
+.chart-info {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  flex-direction: row;
+  /* flex-wrap: wrap; */
+  height: 80%;
+  height: calc(100% - 52px);
+}
+
+.chart-graph {
+  height: 80%;
+  /* min-width: 400px; */
+  width: clamp(300px, 50vw, 550px);
+  /* width: 80%; */
+  position: relative;
+}
+
+.chart-detail p {
+  color: var(--dark-blue);
+  opacity: 60%;
+  width: 50%;
+}
+
+.chart-detail, .chart-graph {
+  height: 100%
+}
+
+
+/* //Legend chart */
+/* FinancialInsight.css */
+
+.custom-chart-legend {
+  list-style: none;
+  display: flex;
+  padding: 0;
+  flex-direction: row;
+  margin: unset;
+  flex-wrap: wrap;
+  justify-content: flex-start;
+}
+
+.custom-chart-legend li {
+  display: flex;
+  gap: unset;
+  align-items: center;
+  margin-right: 10px;
+  color: var(--main-text);
+  height: 20px !important;
+  padding: 10px;
+}
+
+.custom-chart-legend li:hover,
+.custom-chart-legend li:active{
+  background-color: unset !important;
+}
+
+
+.custom-chart-legend span {
+  display: inline-block;
+  width: 12px;
+  height: 12px;
+  margin-right: 5px;
+  /* border-radius: 50%; */
 }
