--- a/v2-trackrecord/src/css/Dashboard.css
+++ b/v2-trackrecord/src/css/Dashboard.css
@@ -511,6 +511,38 @@ div#legend-container {
 }
 
 
+.dialog {
+  display: none;
+}
+
+.dialog[open] {
+  background: rgba(0, 0, 0, 0.5);
+  border: none;
+  border-radius: 8px;
+  padding: 20px;
+  width: 100%;
+  height: 100%;
+  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 2;
+  top: 0;
+}
+
+.modal-content {
+  background: white; /* White background for content */
+  padding: 20px; /* Inner padding */
+  border-radius: 8px; /* Rounded corners */
+}
+
+.dialog-close-btn {
+  background: transparent; /* Transparent background */
+  border: none; /* Remove border */
+  cursor: pointer; /* Pointer cursor */
+}
+
+
 /* Recent Transaction */
 /* TODO: change the color of the fonts */
 .transaction-table { 
