--- a/v2-trackrecord/src/css/Transaction.css
+++ b/v2-trackrecord/src/css/Transaction.css
@@ -1,4 +1,7 @@
 .container.transaction {
+   display: flex;
+   flex-direction: column ;
+   gap: 25px;
    margin-left: 250px; 
    padding: 20px;
    width: calc(100% - 250px); 
