--- a/v2-trackrecord/src/css/Transaction.css
+++ b/v2-trackrecord/src/css/Transaction.css
@@ -8,3 +8,35 @@
    height: 100%;
 }
 
+.organize-data {
+   display: flex;
+   justify-content: space-between;
+   padding-inline: clamp(30px, 5vw, 70px)
+}
+.searchData-container {
+   display: flex;
+   background-color: var(--accent-25);
+   border-radius: 5px;
+   width: 200px;
+   height: 25px;
+   display: flex;
+   align-items: center;
+   position: relative;
+}
+
+.searchData-container input {
+   border: none;
+   width: 100%;
+   height: 100%;
+   padding: 10px;
+   border-radius: 5px;
+   background-color: transparent;
+}
+
+.searchData-container img {
+   position: absolute;
+   right: 7px;
+   width: 20px;
+   height: 15px;
+   z-index: 2;
+}
