--- a/v2-trackrecord/src/css/Transaction.css
+++ b/v2-trackrecord/src/css/Transaction.css
@@ -40,3 +40,40 @@
    height: 15px;
    z-index: 2;
 }
+
+.filterData-container {
+   display: flex;
+   flex-direction: row-reverse;
+   height: 25px;
+   width: clamp(400px, 30vw, 700px);
+   background-color: var(--accent-25);
+   position: relative;
+   border-radius: 5px;
+}
+
+.filterData-container button{
+   display: flex;
+   flex-direction: row-reverse;
+   align-items: center;
+   border: none;
+   width: 100px;
+   font-size: 11px;
+   cursor: pointer;
+   border-right: 1px solid var(--main-text);
+   background-color: var(--main-prim);
+   justify-content: space-evenly;
+}
+
+.filterData-container input{
+   width: 100%;
+   height: 100%;
+   border: none;
+   background-color: transparent ;
+   border-radius: 5px;
+   padding-inline: 10px;
+}
+
+
+.filterData-container img{
+   width: 15px;
+}
