--- a/v2-trackrecord/src/css/Transaction.css
+++ b/v2-trackrecord/src/css/Transaction.css
@@ -11,14 +11,14 @@
 .organize-data {
    display: flex;
    justify-content: space-between;
-   padding-inline: clamp(30px, 5vw, 70px)
+   padding-inline: clamp(25px, 3vw, 70px)
 }
 .searchData-container {
    display: flex;
    background-color: var(--accent-25);
    border-radius: 5px;
    width: 200px;
-   height: 25px;
+   height: 30px;
    display: flex;
    align-items: center;
    position: relative;
@@ -44,7 +44,7 @@
 .filterData-container {
    display: flex;
    flex-direction: row-reverse;
-   height: 25px;
+   height: 30px;
    width: clamp(400px, 30vw, 700px);
    background-color: var(--accent-25);
    position: relative;
@@ -56,7 +56,9 @@
    flex-direction: row-reverse;
    align-items: center;
    border: none;
+   border-radius: 5px 0 0 5px;
    width: 100px;
+   color: var(--main-text);
    font-size: 11px;
    cursor: pointer;
    border-right: 1px solid var(--main-text);
@@ -68,12 +70,27 @@
    width: 100%;
    height: 100%;
    border: none;
+   outline: none;
    background-color: transparent ;
    border-radius: 5px;
    padding-inline: 10px;
 }
 
-
 .filterData-container img{
    width: 15px;
+}
+
+.exportTransaction {
+   width: 100%;
+   background-color: var(--main-prim);
+   border: none;
+   padding: 8px 20px 8px 8px;
+   border-radius: 10px;
+   appearance: none;
+   -webkit-appearance: none;
+   position: relative;
+   background-image: url('./../assets/img/icons/ic-arrow.svg'); 
+   background-repeat: no-repeat;
+   background-position: calc(100% - 5px) center;
+   background-size: 15px;
 }
