--- a/v2-trackrecord/src/css/Dashboard.css
+++ b/v2-trackrecord/src/css/Dashboard.css
@@ -20,6 +20,7 @@
   --accent05: hsla(196, 64%, 60%, 0.05);
 
   --accent-25: rgba(88, 183, 218, 25%);
+  --accent-80: rgba(88, 183, 218, 80%);
 
 
   /* Theme */
