--- a/v2-trackrecord/src/css/navigation.css
+++ b/v2-trackrecord/src/css/navigation.css
@@ -8,7 +8,15 @@ nav {
    position: fixed;
    left: 0; 
    top: 0; 
+   transition: width 0.3s ease;
 }
+
+nav.nav-collapsed {
+   width: 0;
+   overflow: hidden;
+}
+
+
 .nav-items {
   flex-grow: 1;
   display: flex;
@@ -19,7 +27,8 @@ nav {
 .logo {
    display: flex;
    justify-content: center;
-   padding-block: 20px;
+   padding-top: 20px;
+   margin-top: 40px;
 }
 
 .logo img {
@@ -117,7 +126,13 @@ li {
   border-top: 15px solid transparent; 
   border-bottom: 15px solid transparent; 
   border-right: 15px solid var(--main-bg); /* Arrow pointing to the right */
+  transition: opacity 0.3s ease, width 0.3s ease;
 }
+
+.nav-items.hidden ul a li.active::after {
+   opacity: 0;
+   width: 0;
+ }
 
 
 li > .ic img,
@@ -167,3 +182,91 @@ li a,
   }
 }
 
+
+.hamburger-menu {
+   display: flex;
+   flex-direction: column;
+   justify-content: space-around;
+   width: 30px;
+   height: 25px;
+   cursor: pointer;
+   position: absolute;
+   right: 10px;
+   margin-top: 10px;
+ }
+ 
+ .hamburger-bar {
+   width: 100%;
+   height: 4px;
+   background-color: var(--main-bg);
+   border-radius: 2px;
+   transition: transform 0.3s ease, opacity 0.3s ease;
+ }
+ 
+ .hamburger-menu .hamburger-bar:nth-child(1) {
+   transform: translateY(9px) rotate(-44.37deg);
+ }
+ 
+ .hamburger-menu .hamburger-bar:nth-child(2) {
+   opacity: 0;
+ }
+ 
+ .hamburger-menu .hamburger-bar:nth-child(3) {
+   transform: translateY(-9px) rotate(41.73deg);
+ }
+
+
+ .hamburger-menu.active .hamburger-bar:nth-child(1) {
+   transform: translateY(0px) ;
+ }
+ 
+ .hamburger-menu.active .hamburger-bar:nth-child(2) {
+   opacity: 0;
+ }
+ 
+ .hamburger-menu.active .hamburger-bar:nth-child(3) {
+   transform: translateY(0px);
+ }
+
+ .hamburger-menu2 {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  width: 30px;
+  height: 25px;
+  cursor: pointer;
+  position: absolute;
+  right: 10px;
+  margin-top: 10px;
+}
+
+.hamburger-bar2 {
+  width: 100%;
+  height: 4px;
+  background-color: var(--main-accent);
+  border-radius: 2px;
+  transition: transform 0.3s ease, opacity 0.3s ease;
+}
+
+/* 
+.hamburger-menu2.active .hamburger-bar2:nth-child(1) {
+  transform: translateX(50px);
+  transition-delay: 0s;
+}
+.hamburger-menu2.active .hamburger-bar2:nth-child(2) {
+  transform: translateX(50px);
+  transition-delay: 0.1s;
+}
+.hamburger-menu2.active .hamburger-bar2:nth-child(3) {
+  transform: translateX(100px);
+  transition-delay: 0.2s;
+} */
+
+
+.nav-collapsed {
+  width: 0;
+}
+
+.nav-expanded {
+  width: 250px;
+}
