--- a/v3-trackrecord/src/styles/Navbar.css
+++ b/v3-trackrecord/src/styles/Navbar.css
@@ -17,6 +17,9 @@ nav.sidenav {
 
 .sidenav-logo {
   grid-row: 1 / 2;
+  display: flex;
+  flex-direction: column-reverse;
+  align-items: flex-end;
 }
 
 .sidenav-main {
@@ -34,6 +37,12 @@ nav.sidenav {
   display: flex;
   flex-direction: column;
   justify-content: center;
+}
+
+.logo {
+  width: 85%;
+  margin: 10px auto 50px;
+  display: block;
 }
 
 
@@ -77,4 +86,19 @@ main.main-with-nav {
 main.main-full {
   margin-left: 0;
   transition: margin-left 0.3s ease-in-out;
+}
+
+.nav-icon {
+  width: 24px;
+  height: 24px;
+  margin: auto 15px auto 10px  
+}
+
+.sidenav-main a, .sidenav-support a, .sidenav-bottom a{
+  display: flex;
+  align-items: center;
+}
+
+.btn {
+  width: 32px;
 }
