--- a/v3-trackrecord/src/styles/index.css
+++ b/v3-trackrecord/src/styles/index.css
@@ -1,3 +1,7 @@
+:root {
+  --main-bg: #f5fdff;
+}
+
 * {
   box-sizing: border-box;
   padding: 0;
@@ -20,6 +24,16 @@ html, body, #root {
   overflow: hidden;
 }
 
+body {
+  background-color: var(--main-bg);
+}
+
+header {
+  display: flex;
+  gap:20px; 
+}
+
+
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
@@ -37,7 +51,7 @@ nav.sideNav {
 }
 
 main {
-  background-color: #F8FBFC;
+  background-color: var(--main-bg);
   width: 100%;
   overflow: hidden;
   grid-column: span 5 / span 5;
@@ -45,7 +59,6 @@ main {
 }
 
 section#dashboard {
-  background-color: gray;
   width: 100%;
   height: 100vh;
   overflow: hidden;
@@ -77,7 +90,6 @@ main.main-full {
 section#dashboard {
   height: 100%;
   width: 100%;
-  background-color: gray;
   overflow: auto; /* Only scroll if content overflows */
   padding: 1rem;
   box-sizing: border-box;
