--- a/v2-trackrecord/src/css/Dashboard.css
+++ b/v2-trackrecord/src/css/Dashboard.css
@@ -138,9 +138,9 @@ h2 {
 
 /* TODO: add a media query to this container */
 .container.mainDashboard {
-  margin-left: 250px; 
+  /* margin-left: 250px;  */
   padding: 20px;
-  width: calc(100% - 250px); 
+  width: 100%; 
   height: 100%;
   transition: width 0.3s ease, margin-left 0.3s ease;
 }
