--- a/v2-trackrecord/src/css/navigation.css
+++ b/v2-trackrecord/src/css/navigation.css
@@ -12,7 +12,7 @@ nav {
 }
 
 nav.nav-collapsed {
-   width: 0;
+   width: 50px;
    overflow: hidden;
 }
 
@@ -38,6 +38,10 @@ nav.nav-collapsed {
    margin: 0 auto;
 }
 
+.logo.logo-hide {
+    visibility: hidden;
+}
+
 .others, .account {
   margin-bottom: 20px;
 }
@@ -53,7 +57,7 @@ nav.nav-collapsed {
    display: flex;
    gap: 10px;
    width: 100%;
-   padding: 10px;
+   padding: 15px;
    color:var(--main-bg)
 }
 
@@ -71,7 +75,7 @@ li {
    align-items: center;
    justify-content: start;
    gap: 20px;
-   padding: 20px 10px;
+   padding: 15px;
    height: 30px;
    color: var(--main-bg);
    position: relative; 
@@ -98,7 +102,7 @@ li {
 
 /* Default styling for nav items */
 .nav-items ul a li {
-  padding: 20px 20px;
+  padding: 20px 15px;
   color: #fff;
   text-decoration: none;
   position: relative;
@@ -115,7 +119,7 @@ li {
 }
 
 /* Active link with arrow */
-.nav-items ul a li.active::after {
+/* .nav-items ul a li.active::after {
   content: '';
   position: absolute;
   right: 0; 
@@ -125,9 +129,9 @@ li {
   height: 0;
   border-top: 15px solid transparent; 
   border-bottom: 15px solid transparent; 
-  border-right: 15px solid var(--main-bg); /* Arrow pointing to the right */
+  border-right: 15px solid var(--main-bg); 
   transition: opacity 0.3s ease, width 0.3s ease;
-}
+} */
 
 .nav-items.hidden ul a li.active::after {
    opacity: 0;
@@ -243,26 +247,10 @@ li a,
 .hamburger-bar2 {
   width: 100%;
   height: 4px;
-  background-color: var(--main-accent);
+  background-color: var(--main-bg);
   border-radius: 2px;
   transition: transform 0.3s ease, opacity 0.3s ease;
 }
-
-/* 
-.hamburger-menu2.active .hamburger-bar2:nth-child(1) {
-  transform: translateX(50px);
-  transition-delay: 0s;
-}
-.hamburger-menu2.active .hamburger-bar2:nth-child(2) {
-  transform: translateX(50px);
-  transition-delay: 0.1s;
-}
-.hamburger-menu2.active .hamburger-bar2:nth-child(3) {
-  transform: translateX(100px);
-  transition-delay: 0.2s;
-} */
-
-
 
 .nav-collapsed {
   width: 0;
