--- a/v3-trackrecord/src/styles/Dashboard.css
+++ b/v3-trackrecord/src/styles/Dashboard.css
@@ -24,4 +24,24 @@ header.level3-header {
 .panel.total-balance,
 .panel.total-income {
     width: 50%;
+    gap:25px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
 }
+
+.panel.total-balance .left,
+.panel.total-balance .right,
+.panel.total-income .left,
+.panel.total-income .right  {
+    width: 50%;
+
+}
+
+
+.graph canvas {
+  /* width: 100% !important;   */
+  position: relative;
+}
+
